tests/invalid/type_errors/type_mismatches.tj
# Type Mismatches

def type_errors() -> int {
    # String assigned to int
    x: int = "hello"
    
    # Int assigned to string
    y: str = 42
    
    # Bool assigned to int
    z: int = true
    
    # Wrong number of arguments
    result: int = add(5)  # Missing second argument
    
    return x + y + z + result
}

def array_type_errors() -> [int] {
    # Wrong element types
    numbers: [int] = [1, "hello", 3]
    strings: [str] = ["a", 42, "c"]
    
    return numbers
}

def function_type_errors() -> int {
    # Wrong return type
    def bad_return() -> int {
        return "hello"
    }
    
    # Wrong parameter type
    def bad_param(x: int) -> int {
        return x + "hello"
    }
    
    return bad_return() + bad_param("world")
}
